--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,60 @@ API/obj/Debug/net7.0/API.GeneratedMSBuildEditorConfig.editorconfig
 API/obj/Debug/net7.0/API.GlobalUsings.g.cs
 API/obj/project.assets.json
 API/obj/project.nuget.cache
+API/bin/Debug/net7.0/API.deps.json
+API/bin/Debug/net7.0/API.dll
+API/bin/Debug/net7.0/API.exe
+API/bin/Debug/net7.0/API.pdb
+API/bin/Debug/net7.0/API.runtimeconfig.json
+API/bin/Debug/net7.0/appsettings.Development.json
+API/bin/Debug/net7.0/appsettings.json
+API/bin/Debug/net7.0/Humanizer.dll
+API/bin/Debug/net7.0/Microsoft.Data.Sqlite.dll
+API/bin/Debug/net7.0/Microsoft.EntityFrameworkCore.Abstractions.dll
+API/bin/Debug/net7.0/Microsoft.EntityFrameworkCore.Design.dll
+API/bin/Debug/net7.0/Microsoft.EntityFrameworkCore.dll
+API/bin/Debug/net7.0/Microsoft.EntityFrameworkCore.Relational.dll
+API/bin/Debug/net7.0/Microsoft.EntityFrameworkCore.Sqlite.dll
+API/bin/Debug/net7.0/Microsoft.Extensions.DependencyModel.dll
+API/bin/Debug/net7.0/Mono.TextTemplating.dll
+API/bin/Debug/net7.0/SQLitePCLRaw.batteries_v2.dll
+API/bin/Debug/net7.0/SQLitePCLRaw.core.dll
+API/bin/Debug/net7.0/SQLitePCLRaw.provider.e_sqlite3.dll
+API/bin/Debug/net7.0/System.CodeDom.dll
+API/bin/Debug/net7.0/runtimes/alpine-arm/native/libe_sqlite3.so
+API/bin/Debug/net7.0/runtimes/alpine-arm64/native/libe_sqlite3.so
+API/bin/Debug/net7.0/runtimes/alpine-x64/native/libe_sqlite3.so
+API/bin/Debug/net7.0/runtimes/browser-wasm/nativeassets/net7.0/e_sqlite3.a
+API/bin/Debug/net7.0/runtimes/linux-arm/native/libe_sqlite3.so
+API/bin/Debug/net7.0/runtimes/linux-arm64/native/libe_sqlite3.so
+API/bin/Debug/net7.0/runtimes/linux-armel/native/libe_sqlite3.so
+API/bin/Debug/net7.0/runtimes/linux-mips64/native/libe_sqlite3.so
+API/bin/Debug/net7.0/runtimes/linux-musl-arm/native/libe_sqlite3.so
+API/bin/Debug/net7.0/runtimes/linux-musl-arm64/native/libe_sqlite3.so
+API/bin/Debug/net7.0/runtimes/linux-musl-x64/native/libe_sqlite3.so
+API/bin/Debug/net7.0/runtimes/linux-ppc64le/native/libe_sqlite3.so
+API/bin/Debug/net7.0/runtimes/linux-s390x/native/libe_sqlite3.so
+API/bin/Debug/net7.0/runtimes/linux-x64/native/libe_sqlite3.so
+API/bin/Debug/net7.0/runtimes/linux-x86/native/libe_sqlite3.so
+API/bin/Debug/net7.0/runtimes/maccatalyst-arm64/native/libe_sqlite3.dylib
+API/bin/Debug/net7.0/runtimes/maccatalyst-x64/native/libe_sqlite3.dylib
+API/bin/Debug/net7.0/runtimes/osx-arm64/native/libe_sqlite3.dylib
+API/bin/Debug/net7.0/runtimes/osx-x64/native/libe_sqlite3.dylib
+API/bin/Debug/net7.0/runtimes/win-arm/native/e_sqlite3.dll
+API/bin/Debug/net7.0/runtimes/win-arm64/native/e_sqlite3.dll
+API/bin/Debug/net7.0/runtimes/win-x64/native/e_sqlite3.dll
+API/bin/Debug/net7.0/runtimes/win-x86/native/e_sqlite3.dll
+API/obj/Debug/net7.0/API.csproj.CopyComplete
+API/obj/Debug/net7.0/API.csproj.CoreCompileInputs.cache
+API/obj/Debug/net7.0/API.csproj.FileListAbsolute.txt
+API/obj/Debug/net7.0/API.dll
+API/obj/Debug/net7.0/API.genruntimeconfig.cache
+API/obj/Debug/net7.0/API.MvcApplicationPartsAssemblyInfo.cache
+API/obj/Debug/net7.0/API.pdb
+API/obj/Debug/net7.0/apphost.exe
+API/obj/Debug/net7.0/staticwebassets.build.json
+API/obj/Debug/net7.0/ref/API.dll
+API/obj/Debug/net7.0/refint/API.dll
+API/obj/Debug/net7.0/staticwebassets/msbuild.build.API.props
+API/obj/Debug/net7.0/staticwebassets/msbuild.buildMultiTargeting.API.props
+API/obj/Debug/net7.0/staticwebassets/msbuild.buildTransitive.API.props
